build/envoy/conf.d/envoy.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9001

static_resources:
  listeners:
    - name: listener_for_tcp
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 9000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                '@type': "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
                tracing:
                  provider:
                    name: envoy.tracers.zipkin
                    typed_config:
                      "@type": type.googleapis.com/envoy.config.trace.v3.ZipkinConfig
                      collector_cluster: jaeger
                      collector_endpoint: "/api/v2/spans"
                      shared_span_context: false
                      collector_endpoint_version: HTTP_JSON
                codec_type: auto
                stat_prefix: http_proxy
                route_config:
                  name: all
                  virtual_hosts:
                    - name: api_cluster
                      domains:
                        - '*'
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: api_cluster
                access_log:
                  - name: envoy.file_access_log
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: /dev/stdout
                      # https://www.envoyproxy.io/docs/envoy/latest/configuration/observability/access_log/usage#command-operators
                      json_format:
                        method: "%REQ(:METHOD)%"
                        path: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                        time: "%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%"
                        x-forwarded-for: "%REQ(X-FORWARDED-FOR)%"
                        x-request-id: "%REQ(X-REQUEST-ID)%"
                        ua: "%REQ(USER-AGENT)%"
                        protocol: "%PROTOCOL%"
                        response_code: "%RESPONSE_CODE%"
                        host_name: "%HOSTNAME%"
                        upstream_host: "%UPSTREAM_HOST%"
                        upstream_local_address: "%UPSTREAM_LOCAL_ADDRESS%"
                        upstream_transport_failure_reason: "%UPSTREAM_TRANSPORT_FAILURE_REASON%"
                        downstream_remote_address: "%DOWNSTREAM_REMOTE_ADDRESS%"
                        downstream_direct_remote_address: "%DOWNSTREAM_DIRECT_REMOTE_ADDRESS%"
                        downstream_local_address: "%DOWNSTREAM_LOCAL_ADDRESS%"
                        duration: "%DURATION%"
                        start_time: "%START_TIME%"
                        bytes_received: "%BYTES_RECEIVED%"
                        bytes_send: "%BYTES_SENT%"
                        request_headers_bytes: "%REQUEST_HEADERS_BYTES%"
                        response_headers_bytes: "%RESPONSE_HEADERS_BYTES%"
                        response_trailers_bytes: "%RESPONSE_TRAILERS_BYTES%"
                        connection_termination_details: "%CONNECTION_TERMINATION_DETAILS%"
                http_filters:
                  - name: envoy.filters.http.router
  clusters:
    - name: api_cluster
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: api_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: app
                      port_value: 8000
    - name: jaeger
      connect_timeout: 10s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: jaeger
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: jaeger
                      port_value: 9411
